ex 11.20 check health cron

--- a/.github/workflows/healthcheck.yml
+++ b/.github/workflows/healthcheck.yml
@@ -1,7 +1,7 @@
 name: Health check
 on:
   schedule:
-    - cron: '2 * * * *'
+    - cron: '* 8 * * *'
 jobs:
     check_health:
       runs-on: ubuntu-18.04
