--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   simple_deployment_pipeline:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v2
@@ -34,4 +34,4 @@ jobs:
           heroku_app_name: 'calm-wildwood-40210'
           heroku_email: 'mluukkai@iki.fi'
           healthcheck: 'calm-wildwood-40210.herokuapp.com/version'
-          checkstring: 'ok'
+          checkstring: '1'
