--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,4 +35,5 @@ jobs:
           heroku_email: 'mluukkai@iki.fi'
           healthcheck: 'https://calm-wildwood-40210.herokuapp.com/version'
           checkstring: 'ok'
-          delay: 2
+          delay: 1
+          rollbackonhealthcheckfailed: true
