--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,3 +1,10 @@
+name: Pipeline
+
+on:
+  push:
+    branches:
+      - master
+
 jobs:
   simple_deployment_pipeline:
     runs-on: ubuntu-20.04
@@ -9,4 +16,4 @@ jobs:
       - name: npm install 
         run: npm install  
       - name: lint
- 
+        run: npm run eslint
