--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,9 +19,11 @@ jobs:
         run: npm run eslint
       - name: test
         run: npm run test
+      - name: build
+        run: npm run build
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          start: npm run start-prod
           command: npm run test:e2e
+          start: npm run start-prod
           wait-on: http://localhost:8080
