--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
+          wait-on: http://localhost:5000
