--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
+          build: npm run build
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
