--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "morning-reef-61807"
           heroku_email: "barrettpyke@gmail.com"
+          healthcheck: "https://morning-reef-61807.herokuapp.com/health"
+          checkstring: "ok"
