--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -45,7 +45,10 @@ jobs:
     if: ${{ github.event_name == 'push' }}
     steps:
       - name: Bump version and push tag
-        uses: anothrNick/github-tag-action@1.36.0
+      - uses: anothrNick/github-tag-action@1.36.0
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
         env: 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
