--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,10 +30,8 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: heroku
-        env: 
-          COMMIT_MESSAGES: ${{ join(github.event.commits.*.message) }}
         if: ${{ github.event_name == 'push' }}
-            ${{ !contains($COMMIT_MESSAGES, '#skip') }}
+            ${{ !contains(join(github.event.commits.*.message), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -44,11 +42,9 @@ jobs:
           rollbackonhealthcheckfailed: true
   tag_release:
     needs: [simple_deployment_pipeline]
-    env: 
-      COMMIT_MESSAGES: ${{ join(github.event.commits.*.message) }}
     runs-on: ubuntu-20.04
     if: ${{ github.event_name == 'push' }}
-        ${{ !contains($COMMIT_MESSAGES, '#skip') }}
+        ${{ !contains(join(github.event.commits.*.message), '#skip') }}
     steps:
       - uses: actions/checkout@v3
         with:
