--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -19,3 +19,7 @@ jobs:
         run: yarn install
       - name: lint
         run: yarn eslint
+      - name: build
+        run: yarn build
+      - name: test
+        run: yarn test
