--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,3 +17,7 @@ jobs:
         run: npm install
       - name: npm run eslint
         run: npm run eslint
+      - name: npm run build
+        run: npm run build
+      - name: npm run test
+        run: npm run test
