--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,13 +13,25 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
+
       - name: install yarn
         run: npm install yarn
+
       - name: install packages
         run: yarn install
+
       - name: lint
         run: yarn eslint
+
       - name: build
         run: yarn build
+
       - name: test
         run: yarn test
+
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
