--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,6 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          command: npm run test:e2e
-          start: npm run start-prod
+          command: yarn test:e2e
+          start: yarn start-prod
           wait-on: http://localhost:5000
