--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,13 +13,18 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "16"
-          cache: "yarn"
 
-      - name: install yarn
-        run: npm install yarn
+      - name: Setup yarn
+        run: npm install -g yarn
+
+      - name: Setup Nodejs with yarn caching
+        uses: actions/setup-node@v2
+        with:
+          node-version: "16"
+          cache: yarn
 
       - name: install packages
-        run: yarn install
+        run: yarn
 
       - name: lint
         run: yarn eslint
