--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,9 +41,13 @@ jobs:
           command: yarn test:e2e
           start: yarn start-prod
           wait-on: http://localhost:5000
+          
       - name: Heroku deployment
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "shrouded-peak-78795" #Must be unique in Heroku
           heroku_email: "odunsi7069@run.edu.ng"
+          healthcheck: "https://shrouded-peak-78795.herokuapp.com/health"
+          checkstring: "ok"
+          rollbackonhealthcheckfailed: true
