--- a/.github/workflows/simple_deployment_pipeline.yml
+++ b/.github/workflows/simple_deployment_pipeline.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "liandrey-pokedex" #Must be unique in Heroku
+          heroku_app_name: "pokedex-liandrey" #Must be unique in Heroku
           heroku_email: "li.andr1771@gmail.com"
