--- a/.github/workflows/simple_deployment_pipeline.yml
+++ b/.github/workflows/simple_deployment_pipeline.yml
@@ -15,3 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "pokedex-liandrey" #Must be unique in Heroku
           heroku_email: "li.andr1771@gmail.com"
+          healthcheck: "https://pokedex-liandrey.herokuapp.com/health"
+          checkstring: "ok"
