--- a/.github/workflows/simple_deployment_pipeline.yml
+++ b/.github/workflows/simple_deployment_pipeline.yml
@@ -17,3 +17,4 @@ jobs:
           heroku_email: "li.andr1771@gmail.com"
           healthcheck: "https://pokedex-liandrey.herokuapp.com/health"
           checkstring: "ok"
+          rollbackonhealthcheckfailed: true
