--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,5 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - date: Show date
+        run: |
           date
+      - list: List directory content
+        run: |
           ls 
