--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -16,4 +16,5 @@ jobs:
       - name: npm install
         run: npm install
       - name: lint
+        run: npm run eslint --fix
         run: npm run eslint
