--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,7 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
+      - name: lint fix
+        run: run: npm run eslint --fix
       - name: lint
-        run: npm run eslint --fix
         run: npm run eslint
