--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,7 +15,9 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
-      - name: lint fix
-        run: npm run eslint --fix
       - name: lint
         run: npm run eslint
+      - name: build
+        run: npm build
+      - name: test
+        run: npm run test
