--- a/.github/workflows/simple_deployment_pipeline.yml
+++ b/.github/workflows/simple_deployment_pipeline.yml
@@ -16,5 +16,5 @@ jobs:
           heroku_app_name: "pokedex-liandrey" #Must be unique in Heroku
           heroku_email: "li.andr1771@gmail.com"
           healthcheck: "https://pokedex-liandrey.herokuapp.com/health"
-          checkstring: "ok1"
+          checkstring: "ok"
           rollbackonhealthcheckfailed: true
