--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,11 +27,11 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
-      # - name: 'deploy to heroku'
-      #   uses: akhileshns/heroku-deploy@v3.12.12
-      #   with:
-      #     heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-      #     heroku_app_name: 'calm-castle-06567'
-      #     heroku_email: 'karatuomas@gmail.com'
-      #     healthcheck: 'https://calm-castle-06567.herokuapp.com/health'
-      #     checkstring: 'ok'
+      - name: 'deploy to heroku'
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'calm-castle-06567'
+          heroku_email: 'karatuomas@gmail.com'
+          healthcheck: 'https://calm-castle-06567.herokuapp.com/health'
+          checkstring: 'ok'
