--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,6 +32,7 @@ jobs:
       #     wait-on: http://localhost:5000
       - name: 'deploy to heroku'
         if: ${{ github.event_name == 'push' }}
+        if: ${{ !contains(github.event.head_commit.message, '#skip') }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -40,3 +41,15 @@ jobs:
           healthcheck: 'https://calm-castle-06567.herokuapp.com/health'
           checkstring: 'ok'
           rollbackonhealthcheckfailed: true
+    tag_release:      
+      needs: [simple_deployment_pipeline]  
+      runs-on: ubuntu-20.04
+      steps:
+        - name: Bump version and push tag
+          if: ${{ github.event_name == 'push' }}
+          if: ${{ !contains(github.event.head_commit.message, '#skip') }}
+          uses: anothrNick/github-tag-action@1.36.0
+          env:
+            GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
+            DEFAULT_BUMP: patch
+            DRY_RUN: true
