--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,8 +46,7 @@ jobs:
       runs-on: ubuntu-20.04
       steps:
         - name: Bump version and push tag
-          if: ${{ github.event_name == 'push' }}
-          if: ${{ !contains(github.event.head_commit.message, '#skip') }}
+          if: ${{ github.event_name == 'push' &&  !contains(github.event.head_commit.message, '#skip')}}
           uses: anothrNick/github-tag-action@1.36.0
           env:
             GITHUB_TOKEN: ${{ secrets.TOKEN_GITHUB }}
