--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0"
+  },
+  "jest": {
+    "testPathIgnorePatterns": ["/cypress/"]
   }
 }
