--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,5 +11,5 @@ jobs:
     steps:
       - name: Now it is
         run: |
-        echo '`r format(Sys.Date(), "%B %d, %Y")`'
+        echo 'helloooo'
 
