--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
       - name: Say hello
         run: |
-          echo "Hello World!"
+          echo '`r format(Sys.Date(), "%B %d, %Y")`'
