--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -14,4 +14,5 @@ jobs:
           echo "Hello World!"
       - name: Date
         run: |
-          echo $ TZ='America/Los_Angeles' date
+          TZ='America/Los_Angeles' date
+          echo "$(TZ)"
