--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "YOUR APP's NAME" #Must be unique in Heroku
+          heroku_app_name: 'calm-eyrie-69060' #Must be unique in Heroku
           heroku_email: 'davitge303@gmail.com'
