--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,3 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: 'calm-eyrie-69060' #Must be unique in Heroku
           heroku_email: 'davitge303@gmail.com'
+          healthcheck: 'https://calm-eyrie-69060.herokuapp.com/health'
