--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
-      -name: npm test
+      - name: test
         run: npm test
-      - name: npm run build
+      - name: build
         run: npm run build
