--- a/.github/workflows/simple-deployment-pipeline.yml
+++ b/.github/workflows/simple-deployment-pipeline.yml
@@ -22,3 +22,4 @@ jobs:
           branch: 'master'
           healthcheck: 'https://learning-cicd-fullstack.herokuapp.com/health'
           checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
