--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,6 +30,16 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+      - uses: akhileshns/heroku-deploy@v3.12.12
+        if: ${{ github.event_name == 'push' }}
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: 'learning-cicd-fullstack'
+          heroku_email: 'sundesz@gmail.com'
+          branch: 'master'
+          healthcheck: 'https://learning-cicd-fullstack.herokuapp.com/health'
+          checkstring: 'ok'
+          rollbackonhealthcheckfailed: true
       # - name: heroku deployment
       #   uses: akhileshns/heroku-deploy@v3.12.12
       #   if: ${{ github.event_name == 'push' }}
@@ -61,3 +71,15 @@ jobs:
       #   if: |
       #     always() &&
       #     ${{ github.event_name == 'push' }}
+
+  tag_release:
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
+    - uses: actions/checkout@v3
+    - name: Bump version and push tag
+        # https://docs.github.com/en/developers/webhooks-and-events/webhooks/webhook-events-and-payloads#push
+        if: ${{ github.event_name == 'push' && !contains(github.event.head_commit.message, '#skip')}}
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
