--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -72,5 +72,5 @@ jobs:
         with:
           severity: error
           text: Build failed
-          description: 'commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :('
+          description: commit ${{ github.event.head_commit.url }} by ${{ github.event.head_commit.author.username }} broke the build :(
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
