--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -26,9 +26,17 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
+      - name: Run the hello world
         run: | 
           echo Hello, world!
+          
+      - name: Returh the date
+        run: | 
+          echo date
+          
+      - name: Returh the directory content
+        run: | 
+          echo ls
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
