--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -12,3 +12,9 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - name: Date
+        run: |
+          date
+      - name: Directory
+        run: |
+          ls
