--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "jest",
     "eslint": "eslint . --ext .jsx",
     "build": "webpack --mode production",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress open",
+    "cy:run": "cypress run"
   },
   "repository": {
     "type": "git",
