--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -34,3 +34,9 @@ jobs:
       run: npm run build
     - name: test
       run: npm run test
+    - name: e2e tests
+      uses: cypress-io/github-action@v2
+      with:
+        command: npm run cypress:run
+        start: npm run start-prod
+        wait-on: http://localhost:8080
