--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development",
-    "start-prod": "node app.js",
+    "start": "node app.js",
+    "dev": "webpack-dev-server --open --mode development",
     "test": "jest",
     "test:e2e": "cypress open",
     "eslint": "eslint './**/*.{js,jsx}'",
