--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         uses: cypress-io/github-action@v2
         with:
           command: npm run test:e2e
-          start: npm run start
+          start: npm start
           wait-on: http://localhost:4000
       - name:
         uses: akhileshns/heroku-deploy@v3.12.12
