--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm start
-          wait-on: http://localhost:4000
+          wait-on: 'http://localhost:4000'
       - name: deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
