--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   hello_world_job:
     runs-on: ubuntu-20.04
-    setps:
+    steps:
       - name: Say hello
       run: |
         echo "Hello World!"
