--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -1,3 +1,4 @@
+---
 name: Hello World!
 
 on:
@@ -13,3 +14,6 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+          date
+          ls -l
+...
