--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: deployment
+        if: ${{ !contains(join(github.event.commits.*.message, ', '), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -42,7 +43,7 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
   tag_release:
-    if: github.event_name == 'push'
+    if: ${{ (github.event_name == 'push') && (!contains(join(github.event.commits.*.message, ', '), '#skip')) }}
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
