--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,6 +42,17 @@ jobs:
           healthcheck: "https://fso-cicd-pokedex.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+        - name: Build failed
+          uses: rjstone/discord-webhook-notify@v1
+          if: error()
+          with:
+            severity: error
+            username: ${{ github.actor }}
+            avatarUrl: https://avatars.githubusercontent.com/u/92764736?s=400&u=3196da6dd7888e6c949a71f0967a1d7f0c8325d4&v=4
+            description: ${{ github.action }}
+            details: Build error.
+            footer: ${{ github.repository }}
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   tag_release:
     if: ${{ (github.event_name == 'push') && (!contains(join(github.event.commits.*.message, ', '), '#skip')) }}
     needs: [simple_deployment_pipeline]
@@ -56,3 +67,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
+      - name: New version notification
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+          severity: info
+          username: ${{ github.actor }}
+          avatarUrl: https://avatars.githubusercontent.com/u/92764736?s=400&u=3196da6dd7888e6c949a71f0967a1d7f0c8325d4&v=4
+          description: ${{ github.action }}
+          details: A new version has been released!
+          footer: ${{ github.repository }}
+          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          
