--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,8 +32,12 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+  run_deployment:
+    if: ${{ (github.event_name == 'push') && (!contains(join(github.event.commits.*.message, ', '), '#skip')) }}
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
       - name: deployment
-        if: ${{ !contains(join(github.event.commits.*.message, ', '), '#skip') }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -43,19 +47,19 @@ jobs:
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
       - name: Build failed
-        uses: rjstone/discord-webhook-notify@v1
-        if: error()
-        with:
-          severity: error
-          username: ${{ github.actor }}
-          avatarUrl: https://avatars.githubusercontent.com/u/92764736?s=400&u=3196da6dd7888e6c949a71f0967a1d7f0c8325d4&v=4
-          description: ${{ github.action }}
-          details: Build error.
-          footer: ${{ github.repository }}
-          webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+          uses: rjstone/discord-webhook-notify@v1
+          if: failure()
+          with:
+            severity: error
+            username: ${{ github.actor }}
+            avatarUrl: https://avatars.githubusercontent.com/u/92764736?s=400&u=3196da6dd7888e6c949a71f0967a1d7f0c8325d4&v=4
+            description: ${{ github.action }}
+            details: Build error.
+            footer: ${{ github.repository }}
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
   tag_release:
     if: ${{ (github.event_name == 'push') && (!contains(join(github.event.commits.*.message, ', '), '#skip')) }}
-    needs: [simple_deployment_pipeline]
+    needs: [simple_deployment_pipeline, run_deployment]
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
