--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
