first step of the exercise 11.11 - health check

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,5 +31,7 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "pokedex-fso-cicd-practice-1110" #Must be unique in Heroku
-          heroku_email: "yumohuakai@gmail.com"
+          heroku_app_name: 'pokedex-fso-cicd-practice-1110' #Must be unique in Heroku
+          heroku_email: 'yumohuakai@gmail.com'
+          healthcheck: 'https://pokedex-fso-cicd-practice-1110.herokuapp.com/health'
+          checkstring: 'ok'
