--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,3 +21,5 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
+      - name: cypress
+        run: npm run cypress:open
