--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,4 +22,8 @@ jobs:
       - name: test
         run: npm run test
       - name: cypress
-        run: npm run cypress:open
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
