--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}' --fix",
     "build": "webpack --mode production",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -34,6 +34,7 @@
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "cypress": "^9.5.4",
     "eslint": "^6.8.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.11.0",
@@ -48,7 +49,6 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
-    "cypress": "^9.5.4",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
