--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
+    "lintFix": "eslint './**/*.{js,jsx}' --fix",
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
     "test": "jest",
