--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
+    "test:e2e": "cypress open",
     "lintFix": "eslint './**/*.{js,jsx}' --fix",
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
@@ -34,7 +35,9 @@
     "babel-jest": "^25.5.1",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "cypress": "^9.5.4",
     "eslint": "^6.8.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-jest": "^23.11.0",
     "eslint-plugin-react": "^7.19.0",
     "html-loader": "^1.1.0",
