--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Full Stack Open",
   "main": "src/index.js",
   "scripts": {
-    "test:e2e": "cypress open",
+    "test:e2e": "cypress run",
     "lintFix": "eslint './**/*.{js,jsx}' --fix",
     "start": "webpack-dev-server --open --mode development",
     "start-prod": "node app.js",
