--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "eslint": "eslint './**/*.{js,jsx}'",
     "build": "webpack --mode production",
-    "test:e2e": "cypress open"
+    "test:e2e": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -37,7 +37,7 @@
     "cypress": "^9.6.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.11.0",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react": "^7.29.4",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^25.5.4",
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "eslint-plugin-cypress": "^2.12.1",
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
