--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+  pull_request:
+    branches: [master]    
+    types: [opened, synchronize]
 
 jobs:
   simple_deployment_pipeline:
@@ -30,8 +33,11 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: Heroku deploy
+        if: ${{ github.event_name == 'push' }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: ${{secrets.HEROKU_APP}}
           heroku_email: ${{secrets.HEROKU_API_EMAIL}}
+          healtcheck: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"
+          rollbackonhealtcheckfailed: true
