--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,7 +27,7 @@ jobs:
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
-          browser: chrome
+          browser: firefox
           headless: true
           command: npm run test:e2e
           start: npm run start-prod
