--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -40,3 +40,12 @@ jobs:
           heroku_email: ${{secrets.HEROKU_API_EMAIL}}
           healtcheck: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"
           rollbackonhealtcheckfailed: true
+  tag_release:
+    needs: [simple_deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Bump version and push tag
+        uses: anothrNick/github-tag-action@1.36.0
+        env:
+          DEFAULT_BUMP: "#patch"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
