--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "express": "^4.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "serve": "^13.0.2"
   }
 }
