--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,7 +31,7 @@ jobs:
           start: npm run start-prod
           wait-on: http://localhost:5000
       - name: heroku
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ (github.event_name == 'push') && ( ! contains(join(toJSON(github.event.commits.*.message)), "#skip") ) }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with: 
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
@@ -48,7 +48,7 @@ jobs:
         with:
           fetch-depth: '0'
       - name: Bump version and push tag
-        if: ${{ github.event_name == 'push' }}
+        if: ${{ (github.event_name == 'push') && ( ! contains(join(toJSON(github.event.commits.*.message)), "#skip") ) }}
         uses: anothrNick/github-tag-action@1.36.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
