--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -12,3 +12,8 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
+          
+           - name: Time Now
+             run: |
+          date
+        
