--- a/.github/workflows/hello_world.yml
+++ b/.github/workflows/hello_world.yml
@@ -13,7 +13,10 @@ jobs:
         run: |
           echo "Hello World!"
           
-           - name: Time Now
-             run: |
-          date
+          steps:
+             - name: Time Now
+               run: |
+                date
+          
+           
         
