--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -41,6 +41,7 @@ jobs:
           healthcheck: "https://${{secrets.HEROKU_APP}}.herokuapp.com/health"
           rollbackonhealthcheckfailed: true
   tag_release:
+    if: ${{github.event_name == 'push' && !contains(github.event.commits.*.message,#skip)}}
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
