--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,7 +20,7 @@ jobs:
         run: npm install
       - name: lint
         run: npm run eslint
-  test:
+  testing:
     runs-on: ubuntu-20.04
     needs: [checkout]
     steps:
@@ -36,7 +36,7 @@ jobs:
           start: npm run start
           wait-on: http://localhost:5000
   deployment:
-    needs: [tests]
+    needs: [testing]
     if: ${{ !(github.event_name == 'pull_request' && contains(github.event.commits.*.message,'#skip'))}}
     runs-on: ubuntu-20.04
     steps:
