--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,7 +42,7 @@ jobs:
           rollbackonhealthcheckfailed: true
 
   tag_release:
-    if: ${{!( github.event_name == 'pull_request' && contains(github.event.commits.*.message,'#skip'))}}
+    if: ${{ github.event_name != 'pull_request' || !contains(github.event.head_commit.message,'#skip'))}}
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
     steps:
