add build and test runs

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,5 +15,9 @@ jobs:
           node-version: '16'
       - name: npm install
         run: npm install
-      - name: lint
+      - name: Lint
         run: npm run eslint
+      - name: Build
+        run: npm run build
+      - name: Test
+        run: npm run test
